@@ -1,3 +1,7 @@
+2009-02-21  Andreas Kirschbaum
+
+	* Update shortcut images from "?" when the face becomes available.
+
 2009-02-20  Andreas Kirschbaum
 
 	* Add tooltips to shortcuts.
